# q-periapt

./: .dockerignore  .gitattributes  .gitignore  ARTIFACT.md  Cargo.toml  README.md  SECURITY.md  camera-ready-bare-metal.sh  rust-toolchain.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: abi2-platform-candidate.yml  ci.yml  codeql.yml
LICENSES/: Apache-2.0.txt
artifact/: abi2-platform-release-notes.md  android-aar.sh  android-device-smoke.sh  android_device_proof.py  android_elf.py  apple-device-matrix.sh  apple-device-smoke.sh  apple-device-xcode27-gate.sh  apple_device_proof.py  apple_distribution.py  c-package.sh  c_abi_contract.py  c_package_manifest.py  camera-ready-sandbox.sh  camera_ready_proof.py  claim-ledger.json  claim_ledger.py  continuity_context.py  deterministic_archive.py  embedding-readiness.sh  evidence_io.py  git_provenance.py  local-release-consumer-smoke.sh  local-release-index.sh  msvc-version-probe.c  package_bom.py  performance-budgets.json  performance_gate.py  platform_distribution.py  platform_release_contract.py  prekey_selection.py  proof-to-byte.sh  proof_manifest.py  proof_to_byte_finalizer.py  python-env.sh  python-run.sh  python_bootstrap.py  reference_baseline.py  release_binary_scan.py  release_consumer_smoke.py  (+41 more)
bindings/: README.md  contextbound-vectors.txt  shared-test-vectors.json  signed-policy-vectors.json
bindings/android/: README.md
bindings/apple-device/: README.md  project.yml
bindings/c/: README.md  build-and-run.bat  build-and-run.sh  signed_policy_fixture.h  smoke.c
bindings/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
bindings/swift/: Package.swift  README.md
crates/pqt-backends/: Cargo.toml
crates/pqt-backends/examples/: refvec.rs
crates/pqt-backends/src/: hqc.rs  lib.rs  slhdsa.rs  xwing_kat.rs  xwing_vectors.rs
crates/pqt-cli/: Cargo.toml  README.md
crates/pqt-cli/src/: lib.rs  main.rs
crates/pqt-core/: Cargo.toml
crates/pqt-ffi/: Cargo.toml  README.md  cbindgen.toml
crates/pqt-ffi/src/: lib.rs
crates/pqt-kem/: Cargo.toml
crates/pqt-kem/src/: lib.rs
crates/pqt-policy/: Cargo.toml
crates/pqt-sig/: Cargo.toml
crates/pqt-sig/src/: lib.rs
crates/pqt-tls-demo/: Cargo.toml  README.md
crates/pqt-tls-demo/src/: lib.rs
crates/pqt-tls-demo/tests/: handshake.rs
crates/pqt-wasm/: Cargo.toml  README.md
crates/pqt-wasm/src/: lib.rs
crates/q-periapt-backends/: Cargo.toml
crates/q-periapt-backends/benches/: combiner.rs  primitives.rs
crates/q-periapt-backends/examples/: binding_dk_format_witness.rs  gen_fuzz_corpus.rs  paired_profile_perf.rs  refvec.rs
crates/q-periapt-backends/src/: acvp.rs  acvp_slhdsa.rs  contextbound_kat.rs  differential.rs  enhanced_kat.rs  hqc.rs  lib.rs  mldsa.rs  proptests.rs  slhdsa.rs  xwing_kat.rs
crates/q-periapt-backends/tests/: binding_keyformat_separation.rs  mlkem_strict_import.rs
crates/q-periapt-backends/vectors/: acvp-ml-dsa-44-modes.json  acvp-ml-dsa-44.json  acvp-ml-dsa-65-modes.json  acvp-ml-dsa-65.json  acvp-ml-dsa-87-modes.json  acvp-ml-dsa-87.json  acvp-ml-kem-1024.json  acvp-ml-kem-512.json  acvp-ml-kem-768.json  acvp-slh-dsa-sha2-128s.json  acvp-slh-dsa-sha2-192s.json  acvp-slh-dsa-sha2-256s.json
crates/q-periapt-cli/: Cargo.toml  README.md
crates/q-periapt-cli/src/: lib.rs  main.rs
crates/q-periapt-core/: Cargo.toml
crates/q-periapt-core/src/: lib.rs
crates/q-periapt-ffi/: Cargo.toml  cbindgen.toml
crates/q-periapt-ffi/abi/: q-periapt-c-abi-v2.json
crates/q-periapt-ffi/examples/: gen_combine_vectors.rs  gen_signed_policy_vector.rs
crates/q-periapt-ffi/include/: q_periapt.h
crates/q-periapt-ffi/src/: lib.rs
crates/q-periapt-kem/: Cargo.toml
crates/q-periapt-kem/src/: lib.rs
crates/q-periapt-mlkem-native-sys/: Cargo.toml  LICENSE  README.md  build.rs
crates/q-periapt-mlkem-native-sys/LICENSES/: MIT.txt
crates/q-periapt-mlkem-native-sys/scripts/: test_vendor_scripts.py  update-vendor.py  verify-vendor.py
crates/q-periapt-mlkem-native-sys/src/: build_support.rs  build_support_tests.rs  lib.rs  mlkem_bridge.c  mlkem_bridge.h  mlkem_config.h  raw.rs  tests.rs
crates/q-periapt-policy/: Cargo.toml
crates/q-periapt-policy/src/: lib.rs
crates/q-periapt-rustls/: Cargo.toml
crates/q-periapt-rustls/examples/: netem_bench.rs
crates/q-periapt-rustls/src/: lib.rs
crates/q-periapt-rustls/tests/: handshake.rs
crates/q-periapt-sig/: Cargo.toml
crates/q-periapt-sig/src/: lib.rs
crates/q-periapt-tls-demo/: Cargo.toml  README.md
crates/q-periapt-tls-demo/src/: lib.rs
crates/q-periapt-tls-demo/tests/: handshake.rs
crates/q-periapt-wasm/: Cargo.toml  README.md
crates/q-periapt-wasm/src/: lib.rs
ctstats/: Cargo.toml  README.md  build.rs
ctstats/scripts/: ct-gap-probe.sh  ct-in-container.sh
ctstats/src/: ct_shim.c  lib.rs
docs/: ARCHITECTURE.md  BINDING_SECURITY.md  COMBINER_SPEC.md  COMPETITIVE_ANALYSIS.md  CONTINUITY_RESEARCH.md  EMBEDDING_READINESS.md  PAPER_DRAFT.md  ROADMAP.md  THREAT_MODEL.md
docs/continuity/: G1_EFFECT_LIFECYCLE.md  LIFECYCLE_CONTEXT_V1.md  PREKEY_SELECTION_V1.md  README.md  REFERENCE_BASELINE.md  reference-baseline.json
formal/: Dockerfile
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: combine.rs  mlkem_decapsulate.rs
models/q-periapt-continuity-model/: Cargo.toml  README.md
models/q-periapt-continuity-model/examples/: continuity_context_vectors.rs  prekey_selection_vectors.rs
models/q-periapt-continuity-model/src/: codec.rs  commitments.rs  context.rs  lib.rs  model.rs  prekey.rs  types.rs
models/q-periapt-continuity-model/tests/: context.rs  lifecycle.rs  prekey_selection.rs
models/q-periapt-continuity-model/vectors/: lifecycle-context-v1.json  prekey-selection-v1.json
paper/: .gitignore  camera-ready-results.txt  footprint.csv  footprint.sh  microbench-arm64.csv  netem-camera-ready.sh  q-periapt.tex
research/hqc-fips207-candidate/: Cargo.toml  README.md
research/hqc-fips207-candidate/scripts/: verify.sh
research/hqc-fips207-candidate/src/: lib.rs
research/hqc-fips207-candidate/tests/: adapter.rs
(+53 files in other folders)
