# PQ/T Hybrid Cryptographic Suite — Cargo workspace.
#
# Design rule: the security-critical *composition* logic lives in `pqt-core`,
# which is dependency-free and `no_std`. Vetted/verified primitive backends
# (libcrux, RustCrypto, x25519-dalek, sha3, pqcrypto/PQClean) are wired in
# behind traits in the higher crates so the core stays auditable in isolation.
[workspace]
resolver = "2"
members = [
    "crates/pqt-core",
    "crates/pqt-kem",
    "crates/pqt-sig",
    "crates/pqt-policy",
    "crates/pqt-backends",
    "crates/pqt-ffi",
    "crates/pqt-wasm",
    "crates/pqt-tls-demo",
    "crates/pqt-cli",
    "ctstats",
]
# Crates scaffolded but not yet implemented (added to `members` as they land):
#   crates/pqt-ffi      — C ABI (cdylib + staticlib, cbindgen header)
#   crates/pqt-wasm     — wasm-bindgen surface
#   crates/pqt-tls-demo — rustls TLS1.3 / QUIC / HPKE integration demo
#   crates/pqt-cli      — migration inventory + CBOM/SBOM generator

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0 OR MIT"
authors = ["李子昂 <lza020719@gmail.com>"]
repository = ""

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Security-relevant hygiene; tighten over time. Not `deny` yet so the skeleton
# stays green while it is fleshed out.
indexing_slicing = "warn"
panic = "warn"
unwrap_used = "warn"

# Reproducible/auditable release builds. Keep overflow checks ON even in release
# (cheap insurance for a crypto codebase); commit Cargo.lock for supply-chain audit.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
