[package]
name = "q-periapt-ctstats"
description = "Side-channel CI: failure-path indistinguishability gates + dudect-style timing report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
# Build the `ct_verify` binary-CT harness. Off by default so the normal build needs
# no C shim; the `constant-time` CI job enables it. `build.rs` compiles a tiny shim
# that issues the Valgrind `MAKE_MEM_UNDEFINED` client request when `valgrind/memcheck.h`
# is present (Linux CI), and is a no-op otherwise (e.g. macOS) — so it builds and runs
# everywhere; the actual dataflow check happens only under Valgrind.
valgrind = []
# Enable the HQC backend for the `ct_hqc_gap` probe (PQClean C; std/native only).
hqc = ["q-periapt-backends/hqc"]

[dependencies]
q-periapt-core = { path = "../crates/q-periapt-core" }
q-periapt-kem = { path = "../crates/q-periapt-kem" }
q-periapt-backends = { path = "../crates/q-periapt-backends" }

[build-dependencies]
cc = "1"

# Dataflow constant-time gate: only builds with `--features valgrind`.
[[bin]]
name = "ct_verify"
required-features = ["valgrind"]

# Source→binary CT gap probe over real libcrux ML-KEM decapsulate.
[[bin]]
name = "ct_decaps_gap"
required-features = ["valgrind"]

# Source→binary CT gap probe over the (unaudited) HQC PQClean backend — the leaky contrast.
[[bin]]
name = "ct_hqc_gap"
required-features = ["valgrind", "hqc"]
