[package]
name = "pqt-ffi"
description = "C ABI for the PQ/T hybrid suite (ML-KEM-768 + X25519): status-code, length-checked, panic-isolated, indistinguishable-failure decaps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
# staticlib/cdylib for C/Swift/Kotlin linking; rlib so Rust tests can drive the ABI.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
pqt-core = { path = "../pqt-core" }
pqt-kem = { path = "../pqt-kem" }
pqt-backends = { path = "../pqt-backends" }
