[package]
name = "pqt-kem"
description = "Hybrid KEM (ML-KEM-768 + X25519) with pluggable HQC backup, generic over vetted primitive backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# Backend features wire in vetted primitives (added as they are integrated):
#   libcrux-mlkem  -> ML-KEM-768 via libcrux (formally verified, constant-time)
#   dalek-x25519   -> X25519 via x25519-dalek
#   pqclean-hqc    -> HQC backup via pqcrypto/PQClean
std = ["pqt-core/std"]

[dependencies]
pqt-core = { path = "../pqt-core" }
