[package]
name = "pqt-tls-demo"
description = "Transport demo: a PQ/T hybrid KEM handshake over TCP (HPKE-base shaped) + an end-to-end P99 latency harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
pqt-core = { path = "../pqt-core" }
pqt-kem = { path = "../pqt-kem" }
pqt-sig = { path = "../pqt-sig" }
pqt-backends = { path = "../pqt-backends" }
# OS CSPRNG for the client's encapsulation coins / nonces (demo uses real entropy).
getrandom = "0.3"
