[package]
name = "pqt-wasm"
description = "WASM bindings for the PQ/T hybrid suite (ML-KEM-768 + X25519 + SHA3) via wasm-bindgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pqt-core = { path = "../pqt-core" }
pqt-kem = { path = "../pqt-kem" }
pqt-backends = { path = "../pqt-backends" }
# Randomness is passed in by the JS caller (no getrandom/wasm entropy feature needed).
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
