[package]
name = "q-periapt-backends"
description = "Third-party FIPS 203/204/205, X25519, and SHA3 primitive backends wired into the q-periapt-core traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[features]
default = []
# Optional, OFF-BY-DEFAULT SLH-DSA backend. `dep:` gating keeps it out of the
# default build while preserving the verified-green core/KEM surface.
slh-dsa = ["dep:fips205"]

[dependencies]
q-periapt-core = { version = "=0.1.0-alpha.1", path = "../q-periapt-core" }
q-periapt-sig = { version = "=0.1.0-alpha.1", path = "../q-periapt-sig" }
# FIPS 203 ML-KEM. Default RNG support is intentionally disabled: the q-periapt
# traits take explicit seed/coins, keeping randomness at the product boundary.
# Exact pins make the audited source and expanded-key validation semantics stable.
fips203 = { version = "=0.4.3", default-features = false, features = ["ml-kem-512", "ml-kem-768", "ml-kem-1024"] }
# FIPS 204 ML-DSA. As above, q-periapt supplies key-generation and signing
# randomness explicitly, so the default OS-RNG feature is unnecessary here.
fips204 = { version = "=0.4.6", default-features = false, features = ["ml-dsa-44", "ml-dsa-65", "ml-dsa-87"] }
# X25519: deterministic from a 32-byte scalar (no RNG needed via StaticSecret).
# `zeroize` makes StaticSecret wipe its scalar on drop (defense-in-depth for ephemeral secrets).
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
# SHA3-256 / SHAKE-256. `std` is not needed by the digest implementation.
sha3 = { version = "=0.10.9", default-features = false }
# --- optional backends (see [features]) ---
# SLH-DSA (FIPS 205), pure Rust. Deterministic (non-hedged) signing, KAT-able.
fips205 = { version = "0.4.1", optional = true }

[dev-dependencies]
# End-to-end hybrid KEM tests exercise the real backends through q-periapt-kem.
q-periapt-kem = { version = "=0.1.0-alpha.1", path = "../q-periapt-kem" }
# Combiner micro-benchmark (cargo bench). `sha3` provides the faithful
# *streaming* X-Wing combiner baseline to compare our staged path against.
criterion = "0.5"
# Independent RustCrypto ML-KEM for the multi-backend differential test; the
# `deterministic` feature gives byte-exact keygen/encaps from explicit (d‖z, m).
ml-kem = { version = "=0.2.3", features = ["deterministic", "zeroize"] }
# Independent X25519 (orion, pure-Rust, separate lineage from x25519-dalek) for the
# X25519 + full-hybrid differential tests.
orion = "0.17.10"
# Independent ML-DSA (RustCrypto) for the signature-layer differential; FIPS 204
# deterministic keygen/sign give byte-exact comparison + cross-verification.
ml-dsa = "=0.1.1"
# Parse the vendored NIST ACVP conformance vectors (vectors/acvp-*.json).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Drives the SLH-DSA (FIPS 205) ACVP keyGen deterministically: a seed-replaying
# `CryptoRngCore` feeds skSeed‖skPrf‖pkSeed into `fips205::*::try_keygen_with_rng`,
# reproducing NIST's keys byte-for-byte (same rand_core 0.6 the `fips205` dep uses).
# Pulled in only with the `slh-dsa` feature's ACVP test.
rand_core = "0.6"
# Generative property-based testing of combiner/hybrid invariants.
proptest = "1"

[[bench]]
name = "combiner"
harness = false

[[bench]]
name = "primitives"
harness = false
