[package]
name = "q-periapt-core"
description = "Dependency-free no_std core (hybrid KEM combiner + transcript binding + primitive traits) for the PQ/T hybrid suite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[features]
default = []

# No cryptographic primitive dependencies by design: primitives are injected
# via the traits in this crate. This keeps the security-critical composition
# logic small and auditable in isolation.
[dependencies]
