[package]
name = "q-periapt-ffi"
description = "C ABI for the PQ/T hybrid suite (ML-KEM-768 + X25519): status-code, length-checked, panic-isolated, indistinguishable-failure decaps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
# staticlib/cdylib for C/Swift/Kotlin linking; rlib so Rust tests can drive the ABI.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
q-periapt-core = { path = "../q-periapt-core" }
q-periapt-kem = { path = "../q-periapt-kem" }
q-periapt-backends = { path = "../q-periapt-backends" }
q-periapt-policy = { path = "../q-periapt-policy" }

[dev-dependencies]
q-periapt-sig = { path = "../q-periapt-sig" } # Signer trait, to sign a policy in the policy-entry test
