[package]
name = "q-periapt-ffi"
description = "C ABI for the PQ/T hybrid suite (ML-KEM-768 + X25519): status-code, length-checked, panic-isolated, indistinguishable-failure decaps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[lib]
# staticlib/cdylib for C/Swift/Kotlin linking; rlib so Rust tests can drive the ABI.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
q-periapt-core = { version = "0.0.1", path = "../q-periapt-core" }
q-periapt-kem = { version = "0.0.1", path = "../q-periapt-kem" }
q-periapt-backends = { version = "0.0.1", path = "../q-periapt-backends" }
q-periapt-policy = { version = "0.0.1", path = "../q-periapt-policy" }

[dev-dependencies]
q-periapt-sig = { version = "0.0.1", path = "../q-periapt-sig" } # Signer trait, to sign a policy in the policy-entry test
