[package]
name = "q-periapt-policy"
description = "Algorithm-agility policy engine: keep algorithm choices in policy files, never hardcoded in business code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

# Host-side crate (loads/evaluates policy); std is fine here. TOML/serde parsing
# is added in a follow-up — see docs/ROADMAP.md.
[dependencies]
q-periapt-core = { path = "../q-periapt-core" }
