[package]
name = "q-periapt-sig"
description = "Signature layer: ML-DSA-65/87 (general) and SLH-DSA (roots / firmware / long-term), over vetted backends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[features]
default = []
# Concrete backends live in q-periapt-backends (libcrux ml-dsa, fips205 SLH-DSA), gated by
# its `slh-dsa` feature; this crate is backend-agnostic and only defines the trait surface.

[dependencies]
q-periapt-core = { version = "0.0.1", path = "../q-periapt-core" }
