[package]
name = "q-periapt-wasm"
description = "WASM bindings for the PQ/T hybrid suite (ML-KEM-768 + X25519 + SHA3) via wasm-bindgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
q-periapt-core = { path = "../q-periapt-core" }
q-periapt-kem = { path = "../q-periapt-kem" }
q-periapt-backends = { path = "../q-periapt-backends" }
# The signed-policy verification path pulls in an ML-DSA verifier; optional so the default module
# stays lean (encap / decap / combine only).
q-periapt-policy = { path = "../q-periapt-policy", optional = true }
# Randomness is passed in by the JS caller (no getrandom/wasm entropy feature needed).
wasm-bindgen = "0.2"

[features]
# `profile_from_signed_policy` (Policy::load_signed → select_profile) — opt-in, since the ML-DSA
# verifier it needs roughly quadruples the WASM module. Off by default.
signed-policy = ["dep:q-periapt-policy"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
q-periapt-sig = { path = "../q-periapt-sig" } # Signer trait, to sign a policy in the profile test
