[package]
name = "q-periapt-wasm"
description = "WASM bindings for the PQ/T hybrid suite (ML-KEM-768 + X25519 + SHA3) via wasm-bindgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
q-periapt-core = { version = "=0.1.0-alpha.2", path = "../q-periapt-core" }
q-periapt-kem = { version = "=0.1.0-alpha.2", path = "../q-periapt-kem" }
q-periapt-backends = { version = "=0.1.0-alpha.2", path = "../q-periapt-backends" }
# The signed-policy verification path pulls in an ML-DSA verifier; optional so the default module
# stays lean (encap / decap / combine only).
q-periapt-policy = { version = "=0.1.0-alpha.2", path = "../q-periapt-policy", optional = true }
# Randomness is passed in by the JS caller (no getrandom/wasm entropy feature needed).
wasm-bindgen = "0.2"

[features]
# `decision_from_signed_policy` (domain-separated verification + monotonic state + closed
# ResolvedSuite) — opt-in, since the ML-DSA verifier materially enlarges the WASM module.
# The returned bytes are a trusted-caller decision, not an unforgeable JS capability.
signed-policy = ["dep:q-periapt-policy"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
q-periapt-sig = { version = "=0.1.0-alpha.2", path = "../q-periapt-sig" } # Signer trait, to sign a policy in the profile test
